add spatialdetails for circle, polygon and line and implement everything except the DB part

--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/lineinfo/lineinfo.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/lineinfo/lineinfo.fxml
@@ -9,7 +9,7 @@
     <tabs>
         <Tab fx:id="lineTab" text="Line">
             <content>
-                <VBox>
+                <VBox fx:id="vbox">
                     <children>
                         <ListView fx:id="pointsListView" prefHeight="200.0" prefWidth="200.0"/>
                         <HBox>
