--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/circleinfo/circleinfo.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/circleinfo/circleinfo.fxml
@@ -8,28 +8,30 @@
     <tabs>
         <Tab fx:id="circleTab" text="Circle">
             <content>
-                <GridPane>
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    </rowConstraints>
-                    <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CenterX"
-                              GridPane.halignment="CENTER"/>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CenterY"
-                              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Radius"
-                              GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
-                        <TextField fx:id="centerXField" GridPane.columnIndex="1"/>
-                        <TextField fx:id="centerYField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                        <TextField fx:id="radiusField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                    </children>
-                </GridPane>
+                <VBox fx:id="vbox">
+                    <GridPane>
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        </rowConstraints>
+                        <children>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CenterX"
+                                  GridPane.halignment="CENTER"/>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CenterY"
+                                  GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Radius"
+                                  GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
+                            <TextField fx:id="centerXField" GridPane.columnIndex="1"/>
+                            <TextField fx:id="centerYField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                            <TextField fx:id="radiusField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                        </children>
+                    </GridPane>
+                </VBox>
             </content>
         </Tab>
     </tabs>
