--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/polygoninfo/polygoninfo.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/polygoninfo/polygoninfo.fxml
@@ -9,7 +9,7 @@
     <tabs>
         <Tab fx:id="polygonTab" text="Polygon">
             <content>
-                <VBox>
+                <VBox fx:id="vbox">
                     <children>
                         <ListView fx:id="pointsListView" prefHeight="200.0" prefWidth="200.0"/>
                         <HBox>
