--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/rectangleinfo/rectangleinfo.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/rectangleinfo/rectangleinfo.fxml
@@ -8,32 +8,35 @@
     <tabs>
         <Tab fx:id="pointTab" text="Point">
             <content>
-                <GridPane>
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    </rowConstraints>
-                    <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="leftUpX"
-                              GridPane.halignment="CENTER"/>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="leftUpY"
-                              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
-                        <TextField GridPane.columnIndex="1" fx:id="leftUpXField"/>
-                        <TextField fx:id="leftUpYField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                <VBox fx:id="vbox">
+                    <GridPane>
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        </rowConstraints>
+                        <children>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="leftUpX"
+                                  GridPane.halignment="CENTER"/>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="leftUpY"
+                                  GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
+                            <TextField GridPane.columnIndex="1" fx:id="leftUpXField"/>
+                            <TextField fx:id="leftUpYField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="rightDownX"
-                              GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="rightDownY"
-                              GridPane.halignment="CENTER" GridPane.rowIndex="3"/>
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="rightDownXField"/>
-                        <TextField fx:id="rightDownYField" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
-                    </children>
-                </GridPane>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="rightDownX"
+                                  GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="rightDownY"
+                                  GridPane.halignment="CENTER" GridPane.rowIndex="3"/>
+                            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="rightDownXField"/>
+                            <TextField fx:id="rightDownYField" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+                        </children>
+
+                    </GridPane>
+                </VBox>
             </content>
         </Tab>
     </tabs>
