--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/pointinfo/pointinfo.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/pointinfo/pointinfo.fxml
@@ -10,25 +10,27 @@
     <tabs>
         <Tab fx:id="pointTab" text="Point">
             <content>
-                <GridPane>
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    </rowConstraints>
-                    <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="X"
-                              GridPane.halignment="CENTER"/>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Y"
-                              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
-                        <TextField GridPane.columnIndex="1" fx:id="xField"/>
-                        <TextField fx:id="yField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                    </children>
-                </GridPane>
+                <VBox fx:id="vbox">
+                    <GridPane>
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        </rowConstraints>
+                        <children>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="X"
+                                  GridPane.halignment="CENTER"/>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Y"
+                                  GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
+                            <TextField GridPane.columnIndex="1" fx:id="xField"/>
+                            <TextField fx:id="yField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                        </children>
+                    </GridPane>
+                </VBox>
             </content>
         </Tab>
     </tabs>
